Fix width on iPhone

--- a/src/stylus/main.styl
+++ b/src/stylus/main.styl
@@ -12,7 +12,6 @@ a
 
 div#content
   text-align:left
-  min-width:480px
   width:480
   margin:0 auto
   padding:1em
@@ -63,10 +62,10 @@ dd
   margin-left: 2em
 
 
-@media screen and (max-width: 480px) 
+@media screen and (max-width: 480px)
   div#content
-    min-width:300px
-    width:300
+    width:90%
+    padding:0px
   
   h1
     font-size:1.9em
@@ -82,5 +81,5 @@ dd
     font-size:1.1em
   
   dd
-    margin-left:1em
+    margin-left:1.2em
   
